Implemented new rendering for tile entities. Patched inventoryslot dragging code (Function renderLast was not overloaded properly, most likely due to a recent api change). The new machine rendering rotation is still todo.